# knorR

./: .Rbuildignore  .gitignore  .gitmodules  .travis.yml  DESCRIPTION  NAMESPACE  README.md  cleanup.sh  configure  configure.ac  create_Rpkg.sh  example_verifier.R  gen_doc.sh  install.sh  remove_knorR.sh  remove_package.sh
R/: clusternor.R  data.R  knor.R
data/: test_centroids.rda  test_data.rda
inst/: CITATION
man/: FuzzyCMeans.Rd  GMM.Rd  Gmeans.Rd  Hclust.Rd  Hmeans.Rd  Kmeans.Rd  KmeansPP.Rd  Kmedoids.Rd  MiniBatchKmeans.Rd  Skmeans.Rd  Xmeans.Rd  kmeans.Rd  test_centroids.Rd  test_data.Rd
src/: Makevars  Makevars.in  Makevars.win  config.h  config.h.in  package_init.c  rinterface.cpp
src/binding/: knori.hpp
src/libman/: .kmeans_task_coordinator.hpp.swp  .knori.py.swp  ecodes.hpp
tests/: knori.R  testthat.R  verify-correctness.R
tests/testthat/: test-fuzzy-cmeans.R  test-gmeans.R  test-hmeans.R  test-kmeanspp.R  test-kmedoids.R  test-knori.R  test-mb-kmeans.R  test-skmeans.R  test-xmeans.R  verify-correctness.R
